Fixed some sentences

--- a/Manuscripts/Ca Cholesterol/VideoAbstractSlides.qmd
+++ b/Manuscripts/Ca Cholesterol/VideoAbstractSlides.qmd
@@ -12,7 +12,7 @@ data-notes: "We want to share some recent work our lab has done in understanding
 ::: {.notes}
 
 
-CODY: To understand what drives blood cholesterol in mice, we evaluated diversity outbred mice and asked what explains variation in their blood cholesterol.  Diversity outbred mice are derived from the inter-breeding of eight founder strains. are genetically unique. We used data from 840 mice, both male and female, randomized to either a control chow diet or a high fat high sucrose diet.
+CODY: To understand what drives blood cholesterol in mice, we evaluated diversity outbred mice and asked what explains variation in their blood cholesterol.  Diversity outbred mice are derived from the inter-breeding of eight founder strains. Each mouse is genetically unique. We used data from 840 mice, both male and female, randomized to either a control chow diet or a high fat high sucrose diet.
 
 <DUSTIN> Can you highlight part c of this figure
 :::
