Fixed an error where cholesterol was stated instead of calcium

--- a/Manuscripts/Ca Cholesterol/VideoAbstractSlides.qmd
+++ b/Manuscripts/Ca Cholesterol/VideoAbstractSlides.qmd
@@ -90,7 +90,7 @@ DUSTIN: can you highlight the Triglycerides branch point
 :::
 
 ::: {.notes}
-CODY To our surprise, the next predictor was serum calcium.  As you can see, a 1 mg/dL increase in serum choleserol is associated with a 12.7 mg/dL increrase in cholesterol, and this is true in male and female mice, across both diets.
+CODY To our surprise, the next predictor was serum calcium.  As you can see, a 1 mg/dL increase in serum calcium is associated with a 12.7 mg/dL increrase in cholesterol, and this is true in male and female mice, across both diets.
 
 <Dustin>can you highlight the calcium branch point
 :::
