Cleaned out old files in the manuscript folder, updated meta analysis

--- a/Meta Analysis/LDL-Changes.Rmd
+++ b/Meta Analysis/LDL-Changes.Rmd
@@ -133,7 +133,7 @@ ldl.c.meta <- metagen(TE = SMD,
 
 forest.meta(ldl.c.meta, 
             sortvar = SMD,
-            predict = F, 
+            #predict = F, 
             print.tau2 = TRUE,
             print.I2 = TRUE,
             #leftcols=c('Study'),
@@ -161,7 +161,7 @@ bmi.meta <- metagen(TE = BMD,
 
 forest.meta(bmi.meta, 
             sortvar = BMD,
-            predict = F, 
+            #predict = F, 
             print.tau2 = TRUE,
             print.I2 = TRUE,
             #leftcols=c('Study'),
