--- a/Mouse Genetics/Cholesterol/do-cholesterol-prediction.Rmd
+++ b/Mouse Genetics/Cholesterol/do-cholesterol-prediction.Rmd
@@ -409,6 +409,26 @@ cholesterol.data %>%
         legend.position = c(0.85,0.15))
 ```
 
+## Proportions of Elevated Calcium and Cholesterol
+
+```{r calcium-chol-prop}
+cutoff.counts <- 
+  cholesterol.data %>%
+  mutate(High.Ca = calcium2>10.5,
+         High.Chol = chol2>200) %>%
+  group_by(High.Chol,High.Ca) %>%
+  count %>%
+  na.omit %>%
+  pivot_wider(names_from=High.Chol,
+              values_from=n) %>%
+  rename(High.Chol = `TRUE`,
+         Not.High.Chol=`FALSE`) %>%
+  column_to_rownames('High.Ca') 
+
+kable(cutoff.counts %>% mutate(High.Chol.pct=High.Chol/(Not.High.Chol+High.Chol)*100))
+fisher.test(as.matrix(cutoff.counts)) %>% tidy(caption="Fisher Test for enrichment of high cholesterol in mice with high calcium")
+```
+
 # Bone Content and Density
 
 ```{r bmd}
