removed oxford comma

--- a/Meta Analysis/LDL-Changes.Rmd
+++ b/Meta Analysis/LDL-Changes.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Systematic Review of LDL Changes on a Ketogenic Diet"
-author: "Cody Cousineau, Kai-Lin Jen, and Dave Bridges"
+author: "Cody Cousineau, Kai-Lin Jen and Dave Bridges"
 date: "June 18, 2021"
 output:
   html_document:
