--- a/Meta Analysis/LDL-Changes.Rmd
+++ b/Meta Analysis/LDL-Changes.Rmd
@@ -98,7 +98,7 @@ meta.data <-
   mutate(Pooled.Wt.SD=sqrt(`Baseline Weight SD`)) 
 
 library(meta)
-ldl.c.meta <- metagen(TE = SMD,
+ldl.c.meta <- metagen(TE = `Change in LDL-C`,
                  seTE = Pooled.LDL.SD,
                  n.e=n,
                  n.c=n,
@@ -110,9 +110,120 @@ ldl.c.meta <- metagen(TE = SMD,
                  #method.tau = "REML",
                  hakn = TRUE,
                  title = "LDL-C Changes in Ketogenic Diet Studies")
+
+plot(ldl.c.meta)
 ```
 
 We evaluated `r ldl.c.meta$k` studies for this meta-analysis. Using the meta-analysis method, we found fasting blood LDL-C levels were increased `r ldl.c.meta$TE.fixed` mg/dL (95% CI: `r ldl.c.meta$lower.fixed` to `r ldl.c.meta$upper.fixed`) after the ketogenic diet intervention compared to pre-intervention levels, with a significant p-value of `r ldl.c.meta$pval.fixed`. Across these studies, the I<sup>2</sup> is `r ldl.c.meta$I2`, the p-value for Q is `r ldl.c.meta$pval.Q`. This is a highly consistent I^2. 
+
+## Baysian Meta-Analysis
+
+I wanted to try a Bayesian approach to this, so followed the examples here https://bookdown.org/MathiasHarrer/Doing_Meta_Analysis_in_R/bayesian-ma.html
+
+The prior probabilities were set using these assumptions
+
+$$\hat\theta_k \sim N(\theta_k, \sigma^2_k)$$
+$$\theta_k \sim N(\mu, \tau^2) $$
+$$\mu \sim N(0,1) $$
+$$\tau \sim HC(0,0.5)$$
+
+```{r ldlc-bayesian-meta}
+#library(extraDistr)
+#phcauchy(0.3, sigma = 0.3)
+library(brms)
+priors <- c(prior(normal(0,1), class = Intercept),
+            prior(cauchy(0,0.5), class = sd))
+
+meta.ldl.brm <- brm(SMD|se(Pooled.LDL.SD) ~ 1 + (1|Study),
+             data = meta.data,
+             prior = priors,
+             iter = 4000)
+
+summary(meta.ldl.brm)
+pp_check(meta.ldl.brm)
+ranef(meta.ldl.brm)
+post.samples <- as_draws_df(meta.ldl.brm) %>%
+  select(b_Intercept,sd_Study__Intercept) %>%
+  rename(tau=sd_Study__Intercept,
+         smd=b_Intercept)
+
+# density plots of posterior distributions
+ggplot(aes(x = smd), data = post.samples) +
+  geom_density(fill = "lightblue",                # set the color
+               color = "lightblue", alpha = 0.7) +  
+  geom_point(y = 0,                               # add point at mean
+             x = mean(post.samples$smd)) +
+  labs(x = expression(italic(SMD)),
+       y = element_blank()) +
+  theme_minimal()
+
+ggplot(aes(x = tau), data = post.samples) +
+  geom_density(fill = "lightgreen",               # set the color
+               color = "lightgreen", alpha = 0.7) +  
+  geom_point(y = 0, 
+             x = mean(post.samples$tau)) +        # add point at mean
+    labs(x = expression(tau),
+       y = element_blank()) +
+  theme_minimal()
+
+#calculating exact
+smd.ecdf <- ecdf(post.samples$smd)
+smd.ecdf(0.3) #probability that effect is smaller than 0.3
+
+library(tidybayes)
+library(dplyr)
+library(ggplot2)
+library(ggridges)
+library(glue)
+library(stringr)
+library(forcats)
+
+study.draws <- spread_draws(meta.ldl.brm, r_Study[Study,], b_Intercept) %>% 
+  mutate(b_Intercept = r_Study + b_Intercept)
+
+pooled.effect.draws <- spread_draws(meta.ldl.brm, b_Intercept) %>% 
+  mutate(Study = "Pooled Effect")
+
+forest.data.bayes <- bind_rows(study.draws, 
+                         pooled.effect.draws) %>% 
+   ungroup() %>%
+   mutate(Study = str_replace_all(Study, "[.]", " ")) %>% 
+   mutate(Study = reorder(Study, b_Intercept))
+
+forest.data.summary <- group_by(forest.data.bayes, Study) %>% 
+  mean_qi(b_Intercept)
+
+ggplot(aes(b_Intercept, 
+           relevel(Study, "Pooled Effect", 
+                   after = Inf)), 
+       data = forest.data.bayes) +
+  
+  # Add vertical lines for pooled effect and CI
+  geom_vline(xintercept = fixef(meta.ldl.brm)[1, 1], 
+             color = "grey", size = 1) +
+  geom_vline(xintercept = fixef(meta.ldl.brm)[1, 3:4], 
+             color = "grey", linetype = 2) +
+  geom_vline(xintercept = 0, color = "black", 
+             size = 1) +
+  
+  # Add densities
+  geom_density_ridges(fill = "blue", 
+                      rel_min_height = 0.01, 
+                      col = NA, scale = 1,
+                      alpha = 0.8) +
+  geom_pointintervalh(data = forest.data.summary, 
+                      size = 1) +
+  
+  # Add text and labels
+  geom_text(data = mutate_if(forest.data.summary, 
+                             is.numeric, round, 2),
+    aes(label = glue("{b_Intercept} [{.lower}, {.upper}]"), 
+        x = Inf), hjust = "inward") +
+  labs(x = "Standardized Mean Difference", # summary measure
+       y = element_blank()) +
+  theme_minimal()
+
+```
 
 # Average Change in LDL-C
 
