--- a/Meta Analysis/bayesian.bib
+++ b/Meta Analysis/bayesian.bib
@@ -57,3 +57,33 @@
   keywords = {Bayesian,Meta-analysis,small sample,Weakly-informative priors}
 }
 
+@article{cousineauCrosssectionalAssociationBlood2024,
+  title = {Cross-Sectional Association between Blood Cholesterol and Calcium Levels in Genetically Diverse Strains of Mice},
+  author = {Cousineau, Cody M. and Loftus, Kaelin and Churchill, Gary A. and Bridges, Dave},
+  year = {2024},
+  journal = {FEBS Open Bio},
+  volume = {14},
+  number = {3},
+  pages = {426--433},
+  issn = {2211-5463},
+  doi = {10.1002/2211-5463.13757},
+  urldate = {2023-12-28},
+  abstract = {Genetically diverse outbred mice allow for the study of genetic variation in the context of high dietary and environmental control. Using a machine learning approach, we investigated clinical and morphometric factors that associate with serum cholesterol levels in 840 genetically unique Diversity Outbred mice of both sexes (n=417 male and 423 female), and on both a control chow (\% kcals in diet: protein 22\%, carbohydrate 62\%, fat 16\%, no cholesterol) and high fat high sucrose (\% kcals in diet: protein 15\%, carbohydrate 41\%, fat 45\%, 0.05\% cholesterol). We find expected elevations of cholesterol in male mice, as well as in mice with elevated serum triglycerides and/or fed a high fat high sucrose diet. The third strongest predictor was serum calcium which correlated with serum cholesterol across both diets and sexes (r=0.39-0.48) in both Diversity Outbred (p=3.0 x 10-43) and BXD (p=0.005) mice. This is in-line with several human cohort studies which show associations between calcium and cholesterol, and calcium as an independent predictor of cardiovascular events.},
+  copyright = {This article is protected by copyright. All rights reserved.},
+  langid = {english},
+  keywords = {Calcium,Cholesterol,Cross-Sectional,Diversity Outbred},
+  file = {/Users/davebrid/Zotero/storage/HNGZZBAV/Cousineau et al. - Cross-sectional association between blood choleste.pdf}
+}
+
+  @Article{brms_citation,
+    title = {Bayesian Item Response Modeling in {R} with {brms} and {Stan}},
+    author = {Paul-Christian Bürkner},
+    journal = {Journal of Statistical Software},
+    year = {2021},
+    volume = {100},
+    number = {5},
+    pages = {1--54},
+    doi = {10.18637/jss.v100.i05},
+    encoding = {UTF-8},
+  }
+
